# libaid

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  extension.bzl
.github/workflows/: ci.yaml
benchmarks/: BUILD.bazel  thread_safe_queue.cpp  threading.cpp
include/aid/async/: condition_variable.hpp  exclusive.hpp  generator.hpp  lock.hpp  spin_mutex.hpp
include/aid/async/detail/: backoff.hpp  event.hpp
include/aid/container/: thread_safe_queue.hpp
include/aid/coro/: generator.hpp
include/aid/io/: file.hpp
include/aid/threading/: sync_task.hpp  task.hpp  thread.hpp  thread_pool.hpp
src/async/: BUILD.bazel  async.cppm  async_event.cppm  async_task.cppm  future.cppm  generator.cppm  interface.cppm  manual_event.cppm  sync_task.cppm  task.cppm
src/containers/: BUILD.bazel  fixed_array.cppm  interface.cppm  lock_free_deque.cppm  thread_safe_queue.cppm  vector.cppm
src/execution/: BUILD.bazel  interface.cppm  io_service.cppm  io_service_linux.cpp  thread.cppm  thread_pool.cppm
src/file/: BUILD.bazel  interface.cppm
src/memory/: BUILD.bazel  atomic_box.cppm  interface.cppm  memory_resource.cppm
src/mutex/: BUILD.bazel  condition_variable.cppm  exclusive.cppm  interface.cppm  lock.cppm  spin_mutex.cppm
src/simd/: BUILD.bazel  dispatch_x64.cppm  probe.cppm  probe_x64.cpp  simd.cppm  types.cppm
src/threading/: BUILD.bazel  interface.cppm  thread.cppm
src/utils/: BUILD.bazel  interface.cppm
tests/: generator.cpp  lock_free_deque.cpp  locks.cpp  memory_resource.cpp  simd.cpp  thread_pool.cpp  thread_safe_queue.cpp  uring_file.cpp  vector.cpp
utils/bazel/: repositories.bzl
