load("@rules_cpp//cpp:rules.bzl", "cpp_test")

cpp_test(
    name = "tests",
    srcs = [
        "tests/generator.cpp",
        "tests/locks.cpp",
        "tests/thread_safe_queue.cpp",
        # "tests/thread_pool.cpp",
    ],
    deps = [
        "//src/async",
        "//src/mutex",
        "//src/utils",
        "//src/containers",
        # "//src/threading",
        "@catch2",
        "@catch2//:catch2_main",
    ]
)
