load("@rules_cpp//cpp:rules.bzl", "cpp_test")

cpp_test(
    name = "tests",
    srcs = [
        "tests/generator.cpp",
        "tests/locks.cpp",
        "tests/memory_resource.cpp",
        "tests/thread_pool.cpp",
        "tests/thread_safe_queue.cpp",
        "tests/uring_file.cpp",
        "tests/vector.cpp",
    ],
    deps = [
        "//src/async",
        "//src/containers",
        "//src/execution",
        "//src/file",
        "//src/memory",
        "//src/mutex",
        "//src/utils",
        "//utils/third-party:liburing",
        "@catch2",
        "@catch2//:catch2_main",
    ],
)
