module(name = "aid")

bazel_dep(name = "catch2", version = "3.4.0")
bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
bazel_dep(name = "rules_cpp", version = "0.0.0")
git_override(
    module_name = "rules_cpp",
    commit = "11b2c2630c20c8076cd47b8e331ce2804572fa7f",
    remote = "https://github.com/alexbatashev/rules_cpp",
)

non_module_dependencies = use_extension("//:extension.bzl", "non_module_dependencies")
use_repo(non_module_dependencies, "liburing")

tools = use_extension("@rules_foreign_cc//foreign_cc:extensions.bzl", "tools")
tools.cmake(version = "3.23.1")

cpp = use_extension("@rules_cpp//cpp:extension.bzl", "cpp")
cpp.llvm(
    name = "llvm-18",
    version = "main",
)
use_repo(cpp, "llvm-18")

register_toolchains("@llvm-18//:toolchain-linux-x86_64")

register_toolchains("@llvm-18//:toolchain-macos-x86_64")
