load("@rules_cpp//cpp:rules.bzl", "cpp_module")

cpp_module(
    name = "generator",
    interface = "generator.cppm",
    module_name = "aid.async:generator",
)

cpp_module(
    name = "manual_event",
    interface = "manual_event.cppm",
    module_name = "aid.async:manual_event",
)

cpp_module(
    name = "sync_task",
    interface = "sync_task.cppm",
    module_name = "aid.async:sync_task",
    deps = [":manual_event"],
)

cpp_module(
    name = "task",
    interface = "task.cppm",
    module_name = "aid.async:task",
    deps = [
        ":manual_event",
        ":sync_task",
    ],
)

cpp_module(
    name = "async",
    interface = "interface.cppm",
    module_name = "aid.async",
    partitions = [
        ":generator",
        ":manual_event",
        ":sync_task",
        ":task",
    ],
    visibility = ["//visibility:public"],
)
