load("@rules_cpp//cpp:rules.bzl", "cpp_module")

cpp_module(
    name = "generator",
    interface = "generator.cppm",
    module_name = "aid.async:generator",
)

cpp_module(
    name = "future",
    interface = "future.cppm",
    module_name = "aid.async:future",
)

cpp_module(
    name = "manual_event",
    interface = "manual_event.cppm",
    module_name = "aid.async:manual_event",
)

cpp_module(
    name = "sync_task",
    interface = "sync_task.cppm",
    module_name = "aid.async:sync_task",
    deps = [":manual_event"],
)

cpp_module(
    name = "async_task",
    interface = "async_task.cppm",
    module_name = "aid.async:async_task",
    deps = [
        ":manual_event",
        ":sync_task",
    ],
)

cpp_module(
    name = "async",
    interface = "async.cppm",
    module_name = "aid.async",
    partitions = [
        ":generator",
        ":manual_event",
        ":sync_task",
        ":async_task",
        ":future",
    ],
    visibility = ["//visibility:public"],
)
